<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fadingEdge="horizontal"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/hng6_mobile_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FDF9F6"
        android:textStyle="normal"
        android:visibility="visible" />


    <TextView
        android:id="@+id/textviewname"
        android:layout_width="368dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/textviewname" />

    <TextView
        android:id="@+id/textviewtrack"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/textviewtrack" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:text="@string/textviewstage" />
</LinearLayout>