<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fadingEdge="horizontal"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/hng6_mobile_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FDF9F6"
        android:textStyle="normal"
        android:visibility="visible" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="150dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FDF9F6"
        android:textColorHint="#FDF9F6"
        android:textIsSelectable="true"
        android:textSize="30sp"
        tools:text="@string/register_email" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="150dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FDF9F6"
        android:textColorHint="#FDF9F6"
        android:textSize="30sp"
        tools:text="Your password" />

    <EditText
        android:id="@+id/register_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="150dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FDF9F6"
        android:textColorHint="#FDF9F6"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/register_track"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/track"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="75dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:textColor="#FDF9F6"
        android:textColorHighlight="#14110F"
        android:textColorHint="#FDF9F6"
        android:textSize="30sp"
        tools:text="Track" />


    <EditText
        android:id="@+id/register_stage"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="-70dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/stage"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FDF9F6"
        android:textColorHint="#FDF9F6"
        android:textSize="30sp"
        android:visibility="visible"
        tools:text="@string/stage" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#9C27B0"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/btnregister"
        android:textColor="#FDF9F6"
        android:textColorHighlight="#00251414"
        android:textColorHint="#000000"
        android:textSize="36sp" />


</LinearLayout>