<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fadingEdge="horizontal"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/hng6_mobile_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FDF9F6"
        android:textStyle="normal"
        android:visibility="visible" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/your_e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="125dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#FDF9F6"
        android:textSize="30sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="125dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:textColorHint="#FDF9F6"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:background="#9C27B0"
        android:text="@string/login"
        android:textColor="#FDF9F6"
        android:textSize="30sp" />


</LinearLayout>